--- a/.pipelines/diabetes_regression-cd-aks.yml
+++ b/.pipelines/diabetes_regression-cd-aks.yml
@@ -28,7 +28,7 @@ variables:
 - group: devopsforai-aml-vg
 
 
-
+stages:
 - stage: 'Deploy_AKS'
   displayName: 'Deploy to AKS'
   dependsOn: Deploy_ACI
