--- a/.pipelines/diabetes_regression-cd-aks.yml
+++ b/.pipelines/diabetes_regression-cd-aks.yml
@@ -21,7 +21,7 @@ resources:
     trigger:
       branches:
         include:
-        - master
+        - patch-1
 
 variables:
 - template: diabetes_regression-variables-template.yml
